fixing list when the name is too big

--- a/todos-exercise/app.css
+++ b/todos-exercise/app.css
@@ -108,8 +108,7 @@ footer {
 }
 
 .item-list {
-    padding-top: 5px;
-    height: 40px;
+    padding-top: 5px;    
     margin-top: 10px;
     margin-bottom: 10px;
     padding-left: 10px;
